--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offet-3">
+    <div class="col-xs-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
       <div class="checkout">
         <h1>Checkout Summary: </h1>
         <ol class="checkout-list">
