--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -7,6 +7,7 @@
         <%= f.error_notification %>
         <%= f.hidden_field :user_id, value: current_user.id %>
         <%= f.hidden_field :item_id, value: item.id %>
+        <%= f.hidden_field :quantity, value: 1 %>
         <%= f.button :button, class: 'add' do %>
           <%= icon('fas', 'plus') %>
         <% end %>
