--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -10,6 +10,6 @@
     <h6><%= item.user.username.capitalize %></h6>
     <h6>$ <%= item.price %> </h6>
     <p><%= item.pickup_time.strftime("pickup before %I:%M%p |") %></p>
-     <p><%= item.distance %>km</p>
+     <p><%= item.distance_location %>km</p>
   </div>
 </div>
