--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,14 +15,18 @@
 
       <%= link_to "Connect", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Discover", items_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
-      <% if current_user.role == ( 'supplier' || 'both' ) %>
+      <% if current_user.role == 'supplier' || current_user.role == 'both'  %>
       <%= link_to "Upload", new_item_path , class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <% end %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
+          <% if current_user.avatar.present? %>
           <%= cl_image_tag(current_user.avatar, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" ) %>
+          <% else %>
+          <%= image_tag("avatar.png", class:  "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown")%>
+          <% end %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
               <%= link_to "#" do %>
